--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
-    "start": "webpack serve --mode=development --open --port 8080"
+    "start": "webpack serve --mode=development --open --port 8080",
+    "lint": "eslint src/**/*.js --fix"
   },
   "keywords": [],
   "author": "",
